<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddStekkieActivity">

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/LinLay_one"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="100">

        <TextView
            android:text="@string/nieuw_stekkie_toevoegen"
            android:textStyle="bold"
            android:textSize="19sp"
            android:textColor="@color/white"
            android:background="@color/black"
            android:padding="10dp"
            android:elevation="15dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="60"
            android:id="@+id/stekkie_img"
            android:scaleType="centerCrop"
            android:src="@drawable/ph150"/>
        <TextView
            android:id="@+id/stekkie_loc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textColor="@android:color/darker_gray"
            android:drawablePadding="2dp"
            android:text="@string/stekkie_locatie"
            app:drawableLeftCompat="@drawable/ic_baseline_my_location_24" />

        <EditText
            android:id="@+id/stekkie_name"
            android:hint="@string/naam"
            android:inputType="text"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:padding="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/stekkie_desc"
            android:hint="@string/omschrijving"
            android:inputType="text"
            android:textColor="@color/purple_500"
            android:padding="15dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="true"
        android:gravity="bottom"
        android:layout_alignParentBottom="true"
        android:padding="6dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="cancelStekkie"
            android:text="@string/sluiten" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="addPhoto"
            android:text="@string/foto_toevoegen" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="createStekkie"
            android:text="@string/opslaan" />
    </LinearLayout>
</RelativeLayout>