<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/LinLay_one"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="100">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="60"
            android:id="@+id/stekkie_img"
            android:scaleType="centerCrop"
            android:src="@drawable/phfishing"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/stekkie_name"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="20dp"
            android:text="Stekkie name"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/stekkie_loc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textColor="@android:color/darker_gray"
            android:drawablePadding="2dp"
            android:text="@string/stekkie_locatie"
            app:drawableLeftCompat="@drawable/ic_baseline_my_location_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/stekkie_desc"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="20dp"
            android:text="Stekkie disc"
            android:textColor="@color/black"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="true"
        android:gravity="bottom"
        android:layout_alignParentBottom="true"
        android:padding="6dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="closeStekkieDetail"
            android:text="@string/sluiten" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="editStekkie"
            android:text="@string/edit" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="deleteStekkie"
            android:text="@string/delete" />
    </LinearLayout>
</RelativeLayout>

